# barco-pulse-rs

./: .gitignore  Cargo.toml  README.md  build.rs  release.toml
.github/workflows/: build-test.yml  publish.yml  release-pr.yml  release.yml
src/: lib.rs  property_api.rs
src/barco_api/: methods.json  properties.json
src/models/: common.rs  method.rs  property.rs
src/traits/: models.rs
